<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hide and Seek</string>
    <string name="action_settings">Settings</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="time_label">Time</string>
    <string name="no_location_detected">No Location Detected</string>
    <string name="share">Share</string>
    <string name="hide">hide</string>
    <string name="seek">seek</string>
    <string name="takeaguess">take a guess</string>
    <string name="checkguess">check a guess</string>
    <string name="title_activity_query">I was last at...</string>
    <string name="title_activity_hideand_seek_map">HideandSeekMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="map_it">Map It!!!</string>
    <string name="title_activity_seek_activity">Seek_activity</string>
</resources>
